# topologize

./: .gitignore  Cargo.toml  FEATURES.md  LICENSE  README.md  algorithm.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_quality.py  bench_timing.py  inputs.py  run_all.py
python/examples/: compare_methods.py  getting_started.py  parallel_processing.py  prototype.py  subdivision_comparison.py  svg_centerline.py  variable_width_demo.py
python/examples/data/: topo_variability_input.json
python/topologize/: __init__.py
python/topologize/helpers/: __init__.py  svg_parser.py
scripts/: generate_readme_image.py  topologize_svg.py
src/: graph.rs  inflate.rs  lib.rs  python.rs  skeleton.rs  skeleton_cdt.rs  skeleton_voronoi.rs  subdivide.rs  svg_loader.rs
tests/: test_batch.py  test_topologize.py  test_validation.py
