[package]
name = "topologize"
version = "0.1.0"
edition = "2021"

[lib]
name = "_internal"
crate-type = ["cdylib"]

[features]
svg = ["dep:usvg"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
clipper2-rust = "1.0"
cdt = "0.1"
usvg = { version = "0.42", optional = true }
