[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "topologize"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "topologize._internal"
python-source = "python"

[dependency-groups]
dev = [
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "plotly>=6.6.0",
    "pytest>=9.0.2",
    "svgpathtools>=1.7.2",
]
