[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "topologize"
dynamic = ["version"]
description = "Convert messy overlapping polylines into clean topological centerline chains"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Thijs Damsma" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/tdamsma/topologize"
Repository = "https://github.com/tdamsma/topologize"
Issues = "https://github.com/tdamsma/topologize/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "topologize._internal"
python-source = "python"

[dependency-groups]
dev = [
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "plotly>=6.6.0",
    "pytest>=9.0.2",
    "svgpathtools>=1.7.2",
]
